--- a/GsonSample/pom.xml
+++ b/GsonSample/pom.xml
@@ -11,6 +11,7 @@
 		<maven.compiler.version>11</maven.compiler.version>
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
+		<exec.mainClass>GSonSample.Main</exec.mainClass>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
